# datadepth

./: .gitignore  .pre-commit-config.yaml  .pre‑commit‑config.yaml .yaml.pre‑commit‑config.yaml  README.md  pyproject.toml
src/datadepth/: cli.py  generator.py  profiler.py  schema.json  synthesizer.py  synthetic.csv  validators.py
tests/: test_generate.py  test_profiler.py  test_validators.py
