[project]
name = "datadepth"
version = "0.1.0"
description = ""
authors = [
    {name = "WaleedaRaza",email = "waleedraza1211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "datadepth", from = "src" }]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.5"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[tool.poetry.scripts]
datadepth = "datadepth.cli:cli"
